--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -787,7 +787,7 @@ html, body {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
-	min-width: 160px;
+	min-width: 200px;
 	overflow: auto;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
@@ -1453,5 +1453,124 @@ html, body {
 }
 
 .accordion-clickable {
+	cursor: pointer;
+}
+
+.hoc-assoc-div {
+	margin-top: 34px;
+	margin-left: auto;
+    margin-right: auto;
+	width: 1440px;
+	display: block;
+}
+
+.hoc-assoc-menu-div {
+	width: 100%;
+	height: 185px;
+	margin-bottom: 5px;
+	border-radius: 7px;
+}
+
+.hoc-table-row {
+	cursor: pointer;
+}
+
+.hoc-table-row-selected {
+	background-color: #618FCA !important;
+}
+
+.hoc-table-search {
+	margin-top: 10px;
+	margin-left: 10px;
+	width: 1238px;
+	border-radius: 7px;
+	border-width: 0;
+	height: 68px;
+	padding-left: 6px;
+}
+
+.hoc-table-search-button {
+	width: 172px;
+	height: 68px;
+	margin-left: 10px;
+	border-radius: 7px;
+	padding: 5px 5px;
+	display: inline-block;
+	position: relative;
+	top: -2px;
+}
+
+.hoc-table-search-hidden {
+	display: none;
+}
+
+.hoc-table-group-hidden {
+	display: none;
+}
+
+.hoc-table-speciality-hidden {
+	display: none;
+}
+
+.hoc-assoc-select-div {
+	margin-left: 10px;
+	margin-top: 10px;
+	width: 300px;
+	display: inline-block;
+}
+
+.hoc-assoc-select-div-title {
+	margin-left: 15px;
+	margin-bottom: 5px;
+}
+
+.hoc-assoc-select {
+	width: 300px;
+	border-radius: 7px;
+}
+
+.hoc-assoc-after-select {
+	margin-left: 29px;
+	position: relative;
+	top: -40px;
+}
+
+.hoc-assoc-button {
+	border-radius: 7px;
+	padding: 5px 5px;
+}
+
+.hoc-table-search-button:hover, .hoc-table-search-button:hover .icon-smaller, .hoc-assoc-button:hover {
+	background: #618FCA;
+}
+
+.hoc-assoc-button:disabled {
+	background-color:  #859dbb;
+}
+
+.sca-dropdown-div {
+	position: relative;
+	display: inline-block;
+}
+
+.sca-dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 366px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+	text-align: center;
+}
+
+.sca-dropdown-content p {
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.sca-dropdown-content p:hover {
+	background-color: #ddd;
 	cursor: pointer;
 }
