--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1776,3 +1776,9 @@ html, body {
 .admin-registration-button:disabled {
 	background-color:  #859dbb;
 }
+
+.hoc-confirm-student-button {
+	display: block;
+	margin: auto;
+	margin-top: 10px;
+}
