Фиксы таблиц и переоформление примеров науч рука

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1782,3 +1782,9 @@ html, body {
 	margin: auto;
 	margin-top: 10px;
 }
+
+.sca-projects-name-cell {
+	max-width: 200px;
+	overflow: hidden;
+  	text-overflow: ellipsis;
+}
