--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,6 +13,11 @@ html, body {
     background-color: #F1F4FB;
 }
 
+.popover-body {
+	font-size: 24px !important;
+    white-space: pre-wrap !important;
+}
+
 .clearfix {
 	clear: both;
 }
@@ -707,6 +712,7 @@ html, body {
 }
 
 .nir-version-clickable {
+	/*width: 670px;*/
 	width: 810px;
 	height: 50px;
 	border-radius: 7px;
@@ -891,6 +897,10 @@ html, body {
 .popover-body {
 	font-size: 20px;
 	color: #3A5985;
+}
+
+.popover-content {
+	background-color: lime;
 }
 
 /* Отступ снизу, размер футера */
@@ -1832,4 +1842,11 @@ html, body {
 .forgotten-password-input {
 	border-radius: 7px;
 	text-align: center;
+}
+
+.sca-student-theme-area {
+	width: 850px;
+	border-radius: 7px;
+	font-size: 24px;
+	padding-left: 10px;
 }
