--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -976,6 +976,10 @@ html, body {
     font-size: 24px;
 }
 
+.size-23 {
+    font-size: 23px;
+}
+
 /* Текст футера */
 .size-22 {
     font-size: 22px;
@@ -1962,17 +1966,16 @@ html, body {
 	margin-left: 10px;
 	height: 76px;
 	padding-left: 6px;
-	padding-right: 6px;
-	margin-left: 10px;
+	margin-left: 5px;
 	white-space: nowrap;
 	overflow: hidden;
 }
 
-.messages-button:hover {
+.messages-button:hover, .messages-button:hover .message-icon-small {
 	background-color: #618FCA;
 }
 
-.messages-button:disabled {
+.messages-button:disabled, .messages-button:disabled .message-icon-small {
 	/*background-color:  #859dbb; */
 	background-color: #618FCA;
 }
@@ -2003,13 +2006,13 @@ html, body {
 }
 
 .message-compact-div {
-	margin-left: 10px;
+	margin-left: 5px;
 	margin-top: 3px;
-	width: 555px;
+	width: 560px;
 	height: 90px;
 	border-radius: 7px;
 	padding-top: 5px;
-	padding-left: 10px;
+	padding-left: 5px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -2029,12 +2032,23 @@ html, body {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	position: relative;
+	top: -80px;
+	left: 85px;
+	width: 465px;
 }
 
 .compact-message-sender {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+	position: relative;
+	top: -80px;
+	left: 85px;
+	width: 465px;
+	top: -80px;
+	left: 85px;
+	width: 465px;
 }
 
 .message-expanded-div {
@@ -2070,14 +2084,14 @@ html, body {
 .expanded-message-message {	
 	border-radius: 7px;
 	width: 850px;
-	height: 430px;
+	height: 399px;
 	resize: none;
 	padding-left: 6px;
 }
 
 .expanded-message-button {
 	border-radius: 7px;
-	height: 45px;
+	height: 76px;
 	padding-left: 6px;
 	padding-right: 6px;
 }
@@ -2088,4 +2102,25 @@ html, body {
 
 .message-search-filter {
 	display:none;
+}
+
+.message-icon-small {
+	width: 58px;
+	height: 58px;
+	margin-left: -4px;
+	border-width: 0px;
+	padding: 0 0;
+}
+
+.expanded-message-image {
+	width: 60px;
+	height: 60px;
+	margin-left: -2px;
+	border-width: 0px;
+	padding: 0 0;
+	margin-right: 5px;
+}
+
+.small-message-image {
+	display:inline-block;
 }
