--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -177,6 +177,10 @@ html, body {
 	background-color: #859dbb;
 }
 
+.student-nav {
+	min-height: 100px;
+}
+
 /* Кнопки на панели навигации студента */
 .student-navbar-button {
 	padding-left: 5px;
@@ -188,7 +192,7 @@ html, body {
 	transition: 0s;
 	border-radius: 7px;
 	border-width: 0px;
-	line-height: 1.4;
+	line-height: 1.3;
 	min-height: 80px;
 }
 
@@ -227,7 +231,9 @@ html, body {
 
 /* Растояние между элементами панели навигации студента */
 .student-nav .nav-link {
-	padding: 0px 0.2em;
+	/* padding: 0px 0.2em; */
+	padding: 0px 0px;
+	margin-left: 10px
 }
 
 .student-nav.navbar-light {
